updated default results folder

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@
 params {
     
     input = "./"
-    outdir = "./results"
+    outdir = "./results_umi"
     tracedir = "${params.outdir}/pipeline_info/"
 
 }
